Update README with contact and donation info

--- a/README
+++ b/README
@@ -1,8 +1,18 @@
+== Questions? Bugs? Patches? ==
+
+You can reach the maintainers publicly by email at femmejournal@singpolyma.net
+
 == IPFS ==
 
 This repository can be cloned from any IPFS mirror:
 
 /ipns/12D3KooWQSeeZbkkZFsgAbDC1sF1dyVmHtsyngVjErv5Y1SV99KN
+
+== Donations ==
+
+* Regular support: https://liberapay.com/singpolyma
+* One-time PayPal: https://paypal.me/singpolyma
+* Bitcoin: 1GHKCmFbgB9KXh7CHXqCVQY94E6EY8PxRC
 
 == Android Build ==
 
