--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 == Questions? Bugs? Patches? ==
 
-You can reach the maintainers publicly by email at femmejournal@singpolyma.net
+You can reach the maintainers publicly by email at FemmeJournal@singpolyma.net
 
 == IPFS ==
 
